fix: unexpected scrollbars

--- a/src/Playbook.less
+++ b/src/Playbook.less
@@ -26,6 +26,7 @@ body {
   height: 100vh;
   background: var(--theme);
   color: var(--text);
+  overflow: hidden;
 
   &.playbook__preview {
     width: auto;
